--- a/src/client/stylesheets/Chat.css
+++ b/src/client/stylesheets/Chat.css
@@ -116,4 +116,7 @@
     .chatContents{
         width: 320px;
     }
+    .outerChatContainer{
+        margin-left: 0px;
+    }
 }
